# DarkGPT

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  chat_history.csv  chat_history.db  cookies.py  main  orders.db  pyproject.toml  requirements.txt  requirements.txt~  style.css
.github/: FUNDING.yml
.github/workflows/: python-app.yml
.streamlit/: config.toml
backend/: requirements.txt
backend/app/: __init__.py  app.py
backend/app/api/: endpoints.py  upload.py
backend/app/core/: llm_pipeline.py  text_pipeline.py  vector_store.py
backend/app/models/: document.py
backend/app/services/: text_to_speech.py  video_handler.py
backend/config/: __init__.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat  get_gprof  get_objgraph  janome  jp.py  num2words  undill
pages/: DarkGPT.py  summarize.py
utils/: get_response.py  summarize.py
